--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ layout: default
                             <span class="name">
                                 {{ category | first }}
                             </span>
-                            <span class="badge">{{ category | last | size }}</span>
+                            <span class="badge">({{ category | last | size }})</span>
                         </a>
                     </li>
                     {% endfor %}
